<resources>
    <string name="app_name">BottomNavigationView</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>
    <string name="Livevide">livevideo</string>
    <string name="video">video</string>
    <string name="accounts">Accounts</string>
    <string name="me">Me</string>
    <string name="i">i</string>
    <string name="m">m</string>
    <string name="post">TODO</string>
    <string name="chat">TODO</string>
    <string name="money">TODO</string>
    <string name="fami">TODO</string>
    <string name="f">TODO</string>
    <string name="t">TODO</string>
    <string name="ba">TODO</string>
    <string name="act">TODO</string>
    <string name="et">Fame Medal Wall</string>
    <string name="messag">Level</string>
    <string name="wal">Ranking</string>
    <string name="famly">Scan QR Code</string>
    <string name="task_cnter">Settings</string>
    <string name="item_bag">Help &amp; Feedback</string>
    <string name="activitis">Like Us</string>
    <string name="p">TODO</string>
    <string name="y_post">My Post</string>
    <string name="ch">TODO</string>
    <string name="mesages">Messages</string>
    <string name="er">TODO</string>
    <string name="allet">Wallet</string>
    <string name="wo">TODO</string>
    <string name="fmily">Family</string>
    <string name="lv">TODO</string>
    <string name="fans_roup">Fans group</string>
    <string name="tk">TODO</string>
    <string name="task_cner">Task Center</string>
    <string name="gab">TODO</string>
    <string name="ite">Item Bag</string>
    <string name="ti">TODO</string>
    <string name="activ">Activities</string>
    <string name="explore">Explore</string>
    <string name="jh">TODO</string>
    <string name="t54">TODO</string>
    <string name="u87">TODO</string>
    <string name="new_host">New Host</string>
    <string name="chatr">#Chat</string>
    <string name="music">#Music</string>
    <string name="countries_amp_region3"><![CDATA[Countries & Region]]></string>
    <string name="more"><![CDATA[More >]]></string>
    <string name="indonesia">Indonesia</string>
    <string name="indonsia">Indonesia</string>
    <string name="vietnam">Vietnam</string>
    <string name="india">India</string>
    <string name="saudi_arabia">Saudi Arabia</string>
    <string name="su">TODO</string>
    <string name="in">TODO</string>
    <string name="vt">TODO</string>
    <string name="ind">TODO</string>
    <string name="malaysia">Malaysia</string>
    <string name="phillppines">Phillppines</string>
    <string name="thailand">Thailand</string>
    <string name="turkey">Turkey</string>
    <string name="hot_live">Hot Live</string>
    <string name="nearby">Nearby</string>
    <string name="popular">Popular</string>
    <string name="multi_guest">Multi-Guest</string>
    <string name="cg">TODO</string>
    <string name="nt">TODO</string>
    <string name="recommend">Recommend</string>
    <string name="live">Live</string>
    <string name="bar">Bar</string>
    <string name="people">People</string>
    <string name="Priya">Priya</string>
    <string name="indiak">India</string>
    <string name="idn">TODO</string>
    <string name="_1_km">1 KM</string>
    <string name="plu">TODO</string>
    <string name="wallp">TODO</string>
    <string name="wallpa">TODO</string>
    <string name="_123">123</string>
    <string name="em">TODO</string>
    <string name="_54e">54</string>
    <string name="emptys">TODO</string>
    <string name="indial">India</string>
    <string name="dlrm">TODO</string>
    <string name="indias">India</string>
    <string name="age">Age</string>
    <string name="follow">Follow</string>
    <string name="todor">TODO</string>
    <string name="todow">TODO</string>
    <string name="_54tu">54</string>
    <string name="todofd">TODO</string>
    <string name="todol">TODO</string>
    <string name="rajk">Raj</string>
    <string name="johnd">John</string>
    <string name="philippinesr">Philippines</string>
    <string name="shrutik">Shruti</string>
    <string name="aaaa">Malaysia</string>
    <string name="welcome_to_fans_group_screen">Welcome to Fans Group Screen</string>
    <string name="backarrow">TODO</string>
    <string name="fans_group_i_joined">Fans Group I Joined</string>
    <string name="newl">New</string>
    <string name="new_hot">New | Hot</string>
    <string name="llov">TODO</string>
    <string name="you_have_not_joined_any_fan_groups_go_to_the_live_room">You Have Not joined any fan groups,\n Go to the live room…</string>
    <string name="mee">Me</string>
    <string name="todolki">TODO</string>
    <string name="priya_kamblew">Priya Kamble</string>
    <string name="_0123456789">0123456789</string>
    <string name="cro">TODO</string>
    <string name="check_my_vipr"><![CDATA[Check My VIP >]]></string>
    <string name="_05">0</string>
    <string name="_07">0</string>
    <string name="_3">0</string>
    <string name="friendsk">Friends</string>
    <string name="followingr">Following</string>
    <string name="fansew">Fans</string>
    <string name="strack">TODO</string>
    <string name="bigo_parking_king">Bigo Parking King</string>
    <string name="ikwer">TODO</string>
    <string name="uwkl">TODO</string>
    <string name="feedbackd">Feedback</string>
    <string name="more_questionse">More Questions</string>
    <string name="mor">TODO</string>
    <string name="ban_appealr"><![CDATA[Ban & Appeal]]></string>
    <string name="todofl">TODO</string>
    <string name="broadcastl">Broadcast</string>
    <string name="todory">TODO</string>
    <string name="eac">Account</string>
    <string name="ac">TODO</string>
    <string name="paymentkw">Payment</string>
    <string name="todokte">TODO</string>
    <string name="hot_questionsw">Hot Questions</string>
    <string name="todolp">TODO</string>
    <string name="todoip">TODO</string>
    <string name="help_amp_feedck"><![CDATA[Help & Feedback]]></string>
    <string name="hotq">TODO</string>
    <string name="hot_qustions">Hot Questions</string>
    <string name="invoi">TODO</string>
    <string name="paym">Payment</string>
    <string name="todout">TODO</string>
    <string name="accotnt">Account</string>
    <string name="trtdo">TODO</string>
    <string name="todolac">TODO</string>
    <string name="ban_amp_apeal"><![CDATA[Ban & Appeal]]></string>
    <string name="tofkd">TODO</string>
    <string name="more_questdons">More Questions</string>
    <string name="fedback">Feedback</string>
    <string name="bradcast">BroadCast</string>
    <string name="scan_nowe">Scan Now</string>
    <string name="toa">TODO</string>
    <string name="change_covere">Change Cover</string>
    <string name="add_a_title_to_chato">Add a Title to Chat</string>
    <string name="select_tag"><![CDATA[Select tag >]]></string>
    <string name="todoc">TODO</string>
    <string name="share_to">Share to</string>
    <string name="egir">TODO</string>
    <string name="go_livee">Go Live</string>
    <string name="rsmi">TODO</string>
    <string name="multi_guest_liver">Multi-Guest LIVE</string>
    <string name="liver">LIVE</string>
    <string name="lido">TODO</string>
    <string name="heloo_go_live_screenw">Heloo go live screen</string>
    <string name="priya_deshmukh">Priya Deshmukh</string>
    <string name="actt">TODO</string>
    <string name="_0fd">0</string>
    <string name="cle">TODO</string>
    <string name="todokhy">TODO</string>
    <string name="todosy">TODO</string>
    <string name="_6er">6</string>
    <string name="todolsu">TODO</string>
    <string name="baby_lets_shakekj">Baby Lets Shake</string>
    <string name="todr">TODO</string>
    <string name="chaisma">Chaisma</string>
    <string name="todocik">TODO</string>
    <string name="priya_deshmukhcpd">Priya Deshmukh</string>
    <string name="hostd">HOST</string>
    <string name="todocse">TODO</string>
    <string name="_1one">1</string>
    <string name="todothre">TODO</string>
    <string name="_2two">2</string>
    <string name="todots">TODO</string>
    <string name="_3three">3</string>
    <string name="todofcs">TODO</string>
    <string name="_4four">4</string>
    <string name="fcser">TODO</string>
    <string name="five">5</string>
    <string name="tododkr">TODO</string>
    <string name="todossco">TODO</string>
    <string name="todosmilted">TODO</string>
    <string name="todocrsec">TODO</string>
    <string name="todonare">TODO</string>
    <string name="todosetl">TODO</string>
    <string name="selecttwo">SELECT</string>
    <string name="moregre"><![CDATA[More >]]></string>
    <string name="friends1">Friends</string>
    <string name="following32">Following</string>
    <string name="fansre">Fans</string>
    <string name="tododw">TODO</string>
    <string name="todotew">TODO</string>
    <string name="todolk">TODO</string>
    <string name="todous">TODO</string>
    <string name="todo">TODO</string>
    <string name="welcome_to_likeus_pagee">Welcome to likeus Page</string>
    <string name="lpba">TODO</string>
    <string name="like_us">Like us</string>
    <string name="vtdoti">TODO</string>
    <string name="allpi">TODO</string>
    <string name="bigo_livetxt">BIGO LIVE</string>
    <string name="rtitex">TODO</string>
    <string name="liiicon">TODO</string>
    <string name="likev">Like</string>
    <string name="bcubeicon">TODO</string>
    <string name="use_applotesthd">Use App</string>
    <string name="mbiimnhg">TODO</string>
    <string name="horizdot">TODO</string>
    <string name="todociei">TODO</string>
    <string name="todokschoalog">TODO</string>
    <string name="bigo_live_is_on_facebook_join_nfacebook_to_connect_with_bigo_live">BIGO LIVE is on Facebook. Join\nFacebook to Connect With BIGO LIVE.</string>
    <string name="log_inklkj">Log In</string>
    <string name="or">or</string>
    <string name="create_new_accountdkdudb">Create New Account</string>
    <string name="homekijuytgrfeed">Home</string>
    <string name="postfp">Post</string>
    <string name="videosfv">Videos</string>
    <string name="photosfpp">Photos</string>
    <string name="eventsfe">Events</string>
    <string name="aboutdf">About</string>
    <string name="mailiconimg">TODO</string>
    <string name="feedback_bigo_tv">feedback@bigo.tv</string>
    <string name="interneticonimage">TODO</string>
    <string name="https_bigolive_onelink_me_sg8x_globalfb">https://bigolive.onelink.me/sG8X/globalFB</string>
    <string name="todoinfiicononfh">TODO</string>
    <string name="top_1_mobile_livestreaming_app_download_app_nhttps_bigolive_onelink_me_sg8x_globalfb_send_n_questions_and_suggestions_to_feedback_email">Top 1 Mobile livestreaming App. Download App :\nhttps://bigolive.onelink.me/sG8X/globalFB send \n Questions and suggestions to feedback email</string>
    <string name="todobtprr">TODO</string>
    <string name="top_rank">Top Rank</string>
    <string name="indiaa">India</string>
    <string name="global">Global</string>
    <string name="beans_got">Beans Got</string>
    <string name="gifts_sent">Gifts Sent</string>
    <string name="ddssss">beans fragment</string>
    <string name="gifts_sentssawerdswe">gifts sents</string>
    <string name="this_hour">This Hour</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="todayfragment">Todayfragment</string>
    <string name="this_week_fragment">this week fragment</string>
    <string name="this_hour_fragment">this hour fragment</string>
    <string name="todofhyrtg">TODO</string>
    <string name="x2">X2</string>
    <string name="no_1">No. 1</string>
    <string name="todoseudhgf">TODO</string>
    <string name="x1wq">X1</string>
    <string name="no_2">No. 2</string>
    <string name="todothreopsj">TODO</string>
    <string name="x1lourt">X1</string>
    <string name="no_3">No. 3</string>
    <string name="about_rulesd"><![CDATA[About Rules >]]></string>
</resources>