<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AccountFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:cardCornerRadius="4dp">

        <TextView
            android:id="@+id/me"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/mee"
            android:textColor="#EA6490"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="300dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_search"
            app:tint="#000"
            android:contentDescription="@string/todofd">
        </ImageView>

        <ImageView
            android:id="@+id/goprofo"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="350dp"
            android:layout_marginLeft="350dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_account"
            app:tint="#000"
            android:contentDescription="@string/todolki">
        </ImageView>
    </androidx.cardview.widget.CardView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@mipmap/ic_launcher_round"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        app:civ_border_width="3dp"
        app:civ_border_color="#EA6490"/>

    <TextView
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/priya_kamblew"
        android:textColor="#000">
    </TextView>

    <TextView
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:text="@string/_0123456789"
        android:textSize="15sp"
        android:gravity="center_horizontal">
    </TextView>

    <androidx.cardview.widget.CardView
        android:layout_width="190dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="260dp"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="#EA6490">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="20dp"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/crown"
            app:tint="#ffffff"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/cro">
        </ImageView>

        <TextView
            android:layout_width="120dp"
            android:layout_height="25dp"
            android:text="@string/check_my_vipr"
            android:textSize="17sp"
            android:textColor="#ffffff"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="55dp"
            android:layout_marginStart="55dp">
        </TextView>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="vertical"
        android:layout_marginTop="330dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:text="@string/_05"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="70dp"
                android:layout_marginStart="70dp">
            </TextView>

            <TextView
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:text="@string/_07"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="70dp"
                android:layout_marginStart="70dp">
            </TextView>

            <TextView
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:text="@string/_3"
                android:textStyle="bold"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="80dp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:text="@string/friendsk"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp">
            </TextView>

            <TextView
                android:layout_width="90dp"
                android:layout_height="25dp"
                android:text="@string/followingr"
                android:textSize="18sp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="50dp">
            </TextView>

            <TextView
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:text="@string/fansew"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp">
            </TextView>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="420dp"
        android:background="#EA6490" />


    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="430dp"
        android:src="@drawable/stack"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        app:tint="#EA6490"
        android:contentDescription="@string/strack">
    </ImageView>

    <TextView
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="430dp"
        android:text="@string/bigo_parking_king"
        android:textSize="20sp"
        android:textColor="#EA6490">
    </TextView>

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="430dp"
        android:layout_marginLeft="370dp"
        android:layout_marginStart="370dp"
        android:src="@drawable/ic_arrow"
        android:contentDescription="@string/ikwer">
    </ImageView>


    <ImageView
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_marginTop="470dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:src="@drawable/car"
        android:contentDescription="@string/uwkl">
    </ImageView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="580dp"
        android:background="#EA6490" />
</RelativeLayout>
