<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/man4"
    android:layout_marginBottom="60dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LivevideoFragment">

    <ImageView
        android:id="@+id/clcr"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_close"
        app:tint="#ffffff"
        android:layout_marginTop="5dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/todoc"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp">
    </ImageView>

    <LinearLayout
        android:id="@+id/clcr1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/clcr">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="15dp">

            <ImageView
                android:id="@+id/alogo"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/a"
                android:contentDescription="@string/toa">
            </ImageView>

            <TextView
                android:layout_marginTop="60dp"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textColor="#ffffff"
                android:padding="5dp"
                android:text="@string/change_covere"
                android:background="#ACA9A9">
            </TextView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/clcr2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/clcr"
        android:layout_toRightOf="@id/clcr1"
        android:layout_toEndOf="@id/clcr1">

        <TextView
            android:layout_weight="1"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:text="@string/add_a_title_to_chato"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:textStyle="bold">
        </TextView>

        <androidx.cardview.widget.CardView
            android:layout_width="90dp"
            android:layout_height="22dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="13dp">
            <TextView
                android:layout_width="110dp"
                android:layout_height="20dp"
                android:text="@string/select_tag"
                android:textSize="15sp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:textColor="#E12663">
            </TextView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/clcr4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@id/clcr1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/share_to"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp">
        </TextView>

        <androidx.cardview.widget.CardView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            app:cardCornerRadius="30dp"
            app:cardBackgroundColor="#636262"
            android:layout_marginStart="15dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_dw"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/tododw">
            </ImageView>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:cardCornerRadius="30dp"
            app:cardBackgroundColor="#636262"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/twitter"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                app:tint="#ffffff"
                android:contentDescription="@string/todotew">
            </ImageView>
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:layout_marginHorizontal="10dp">
        </View>

        <androidx.cardview.widget.CardView
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:cardCornerRadius="30dp"
            app:cardBackgroundColor="#636262"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_lock"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                app:tint="#ffffff"
                android:contentDescription="@string/todolk">
            </ImageView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/clcr3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_below="@id/clcr4"
        android:layout_marginTop="310dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:src="@drawable/woman"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/egir"
            app:tint="#ffffff">
        </ImageView>

        <Button
            android:id="@+id/golive"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:text="@string/go_livee"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/custom_rou_corner">
        </Button>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_rsmile"
            android:contentDescription="@string/rsmi">
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/clcr5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginTop="15dp"
        android:layout_below="@id/clcr3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:text="@string/multi_guest_liver"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liver"
            android:textSize="20sp"
            android:layout_marginHorizontal="20dp"
            android:textColor="#ffffff"
            android:textStyle="bold">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_below="@id/clcr5"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_marginRight="40dp"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_baseline_fiber_manual_record_24"
            android:contentDescription="@string/lido"
            android:layout_marginEnd="40dp">
        </ImageView>


    </LinearLayout>
</RelativeLayout>