<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Home1Fragment">



        <LinearLayout
            android:id="@+id/fh1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutdf"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000">
            </TextView>

            <LinearLayout
                android:id="@+id/fh2"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_mail"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/mailiconimg">
                </ImageView>
                
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:text="@string/feedback_bigo_tv"
                    android:textColor="#1181DA"
                    android:textSize="15sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp">
                </TextView>
            </LinearLayout>
            
            <LinearLayout
                android:id="@+id/fh3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">
                
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_internet"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/interneticonimage">
                </ImageView>

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:text="@string/https_bigolive_onelink_me_sg8x_globalfb"
                    android:textSize="15sp"
                    android:textColor="#1181DA"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fh4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_info"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/todoinfiicononfh">
                </ImageView>

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:text="@string/top_1_mobile_livestreaming_app_download_app_nhttps_bigolive_onelink_me_sg8x_globalfb_send_n_questions_and_suggestions_to_feedback_email"
                    android:textSize="15sp"
                    android:textColor="#000"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp">
                </TextView>
            </LinearLayout>


        </LinearLayout>




</ScrollView>